--- a/itm780_lab_3/styles.css
+++ b/itm780_lab_3/styles.css
@@ -11,6 +11,7 @@ p {
 
 h1 {
     font-size: 36pt; 
+    margin: 15pt;
     color: #00c9a7; 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Font family for h1 */
 }
@@ -75,47 +76,4 @@ th {
 .cell-link:active {
     color: #4e4351;
     text-decoration: solid;
-}
-nav {
-    background-color: #845ec2;
-    width: 110px;
-    height: 170vh;
-    float: left;
-    top: 0;
-    left: 0; /* please close on left */
-    margin-left: 0;
-    padding-top: 20px;
-    z-index: 1000;
-}
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: block;
-}
-nav ul li {
-    position: relative;
-    margin-right: 0;
-}
-nav a {
-    color: #689cb6;
-    text-decoration: none;
-    padding: 15px;
-    display: block;
-}
-.submenu { 
-    display: none;
-    position: static; /* i think this'll work? */
-    background-color: aliceblue;
-
-}
-.submenu li {
-    margin: 0;
-}
-.submenu a {
-    padding: 10px 15px;
-}
-.content {
-    margin-left: 20px;
-    overflow: hidden; /* PLEASE WORK */
 }
