--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ th {
 nav {
     background-color: #845ec2;
     width: 110px;
-    height: 170vh;
+    height: 100%;
     float: left;
     top: 0;
     left: 0; /* please close on left */
